--- a/global_assets/nav.css
+++ b/global_assets/nav.css
@@ -12,6 +12,36 @@
   float: left;
   overflow: hidden;
 }
+.osh-light .dropdown .dropdown-arrow::after {
+	border-color: #fff;
+}
+.osh-light .osh-mm .hs-menu-depth-1 .dropdown-arrow {
+  color: #fff
+}
+
+.osh-mm .hs-menu-depth-1 .dropdown-arrow{
+  list-style: none;
+  font-family: 'Raleway', Helvetica, sans-serif;
+  float: left;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 16px;
+  padding: 30px 15px;
+  letter-spacing: .5px;
+  color: #3B4550;
+  text-transform: uppercase;
+  position: relative;
+  text-decoration: none !important;
+  display: block;
+  z-index: 2
+}
+
+.osh-mm .hs-menu-depth-1 .dropdown-arrow:hover{
+  color: #40AA1D;
+  cursor: pointer;
+}
+
 
 .dropdown .dropdown-arrow::after {
   content: '';
@@ -640,3 +670,162 @@ background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox=
 }
 
 
+/* mobile styles */
+.mobile-menu-wrapper{
+  display: none;
+  height: 78px;
+  background-color: #F3F3F3;
+}
+.new-mob-btn-menu{
+  height: 14px;
+  width: 22px;
+  float: right;
+  margin: 30px 20px;
+  line-height: 14px;
+  border: 2px solid #3D4647;
+  border-width: 2px 0;
+}
+.new-mob-menu.open .new-mob-search{
+    background: white;
+}
+.mobile-menu-wrapper .new-mob-btn-menu::after{
+  content: '';
+  height: 2px;
+  width: 22px;
+  margin-top: 4px;
+  background-color: #3D4647;
+  float: left;
+  border-top: ;
+}
+@media (max-width:767px){
+  .justify-content-between{
+      justify-content: space-between;
+  }
+  .new-mob-menu{
+      padding-top:25px;
+      padding-bottom: 36px;
+      position: absolute;
+      height:100%;
+      background-color: #3D4647;
+      transition: all ease-in .5s;
+      right: 0;
+      top:0;
+      width: 0;
+      height: 100vh;
+      z-index: 12;
+  }
+  .new-mob-menu.open{
+     width:80%;
+    z-index: 12;
+    transition: all ease-in .5s;
+
+  }
+  .mobile-menu-wrapper{
+  display: block;
+  }
+  .close-mob-menu{
+      display: block;
+      height:15px;
+      width: 15px;
+      margin-bottom: 20px;
+      margin-right: 25px;
+      margin-left: auto;
+
+  }
+
+  .close-mob-menu:after {
+    position: absolute;
+    top: 20px;
+    content: "\2573"; /* use the hex value here... */
+    font-size: 15px; 
+    color: #FFF;
+    text-align: center;
+}
+
+  .new-mob-search{
+    position: absolute;
+    width: 70%;
+    height: 20px;
+    right: 34px;
+    top: 60px;
+    background: transparent;
+    border-radius: 7px;
+    border: none;
+    top: 60px;
+  }
+  .new-search-ic{
+    position: absolute;
+  }
+
+  .sticky-nav-search-new::after{
+    content: '';
+    display: block;
+    position: relative;
+    top: 30px;
+    width: 90%;
+    left: 0%;
+    border-bottom: 1px solid #5D696A;
+    z-index: 11;
+  }
+
+  .mob-menu-content ul{
+      list-style-type: none;
+      padding: 0;
+      margin: 0; 
+  }
+  .mob-menu-content {
+      padding-left: 49px;
+      padding-top: 40px;
+  }
+  .mob-menu-item a{
+      margin-top: 25px !important;
+      font-weight: 700 !important;
+      font-family: 'Raleway', Helvetica, sans-serif; ;
+      font-size: 15px !important;
+      line-height: 1.173 !important;
+      color:#fff !important;
+  }
+  .student-account-btn span{
+      font-weight: 700 ;
+      font-family: 'Raleway', Helvetica, sans-serif; 
+      font-size: 13px !important;
+      line-height: 1.173 !important;
+      color:#fff !important;
+      letter-spacing: 5%;
+      text-align: center;
+      margin-left: 3px;
+  }
+  .student-account-btn {
+     background-color:#617480;
+     padding:10px 17.07px;
+     margin-bottom: 15px;
+     margin-top: 28px;
+     border: none;
+  }
+  .request-trail {
+      background-color: #00890B;
+      border-color:#40AA1D;
+      border-width: 3px;
+      font-weight: 700 ;
+      font-family: 'Rajdhani', sans-serif;
+      font-size: 15px !important;
+      line-height: 1.276 !important;
+      color:#fff !important;
+      letter-spacing: 5%;
+      text-align: center;
+      /* width: 100%; */
+      padding: 10px 59px;
+      
+  }
+
+  .mob-menu-header{
+      padding-left: 25px;
+  }
+
+}
+
+@media (max-width: 992px) {
+  .osh-cta-v3{
+     display: none;
+  }
+}
